# NowcastAutoGP

./: .gitignore  .pre-commit-config.yaml  INVESTIGATION_RESULTS.md  Project.toml  Project__2.toml  README.md
.github/: copilot-instructions.md
.github/workflows/: CompatHelper.yml  docs.yml  pre-commit.yaml  (+2 more)
EpiAutoGP/: Containerfile  STRUCTURE.md  pyproject.toml
EpiAutoGP/end-to-end/: create_epiautogp_input.py
EpiAutoGP/pipeline/: generate_test_data.py  prep_data.py  prep_ww_data.py  utils.py
EpiAutoGP/python_pipeline/: README.md
EpiAutoGP/python_pipeline/pipeline/: __init__.py  generate_test_data.py  nhsn_to_epiautogp.py  nssp_to_epiautogp.py  prep_data.py
EpiAutoGP/test/: test_modelling.jl
dev/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
docs/: Project.toml  make.jl  make_vignettes.jl
examples/: autogp_transforms_example.jl
src/: NowcastAutoGP.jl  TData.jl  create_nowcast_data.jl  forecasting.jl  make_and_fit_model.jl  run_model.jl  transformations.jl
test/: Project.toml  test_aqua.jl  test_autogp_transforms.jl  test_deepcopy_models.jl  test_forecasting.jl  test_gpconfig.jl  test_helper_functions.jl  test_model_fitting.jl  test_nowcast_functions.jl
test_old/: runtests.jl  test_forecasting.jl  test_helper_functions.jl  test_model_fitting.jl  test_nowcast_functions.jl
v0.2.0/: .documenter-siteinfo.json  index.html  objects.inv  search_index.js
v0.3.0/: .documenter-siteinfo.json  index.html
v0.4.0/: .documenter-siteinfo.json  index.html  search_index.js
v0.5.0/: .documenter-siteinfo.json  index.html  search_index.js
(+34 files in other folders)
