[project]
name = "epiautogp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "arviz>=0.22.0",
    "forecasttools",
    "jax>=0.7.2",
    "numpy>=2.3.3",
    "polars>=1.31.0",
    "pyrenew-hew",
    "scipy>=1.16.2",
]

[tool.uv.sources]
forecasttools = { git = "https://github.com/CDCgov/forecasttools-py.git" }
pyrenew-hew = { git = "https://github.com/CDCgov/pyrenew-hew.git" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]
